nginx-deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx
  name: nginx-deploy-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
      version: v1
  template:
    metadata:
      labels:
        app: nginx
        version: v1
    spec:
      containers:
      - image: arieszhang/nginx-istio-test:v1
        name: nginx
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi      
          
---

apiVersion: v1
kind: Service
metadata:
  name: nginx-svc-v1
spec:
    selector:
      app: nginx
      version: v1
    ports:
        - port: 80
