ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nginx-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - nginx.aries.me

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx
spec:
  hosts:
  - nginx.aries.me
  gateways:
  - nginx-gateway
  http:
  - match:
    - headers:
        test:
          exact: bvt
    route:
    - destination:
        host: nginx-svc-v2

  - route:
    - destination:
        host: nginx-svc-v1
